fixed spacing between menu subsections by transforming it into a list and using flexbox

--- a/src/styles/menu-section.module.scss
+++ b/src/styles/menu-section.module.scss
@@ -51,8 +51,11 @@ $logo-green-shade-1: #3d570e;
   border: 1px solid $logo-green-shade-1;
 }
 
-.menu-subsection {
-  margin-bottom: 5.6rem;
+.menu-body {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 5.6rem;
 }
 
 .subsection-heading {
